--- a/index.htm
+++ b/index.htm
@@ -3,15 +3,16 @@
   <head>
     <title>game</title>
     <style type="text/css">
-        body, div{  margin: 0px;padding: 0px; font-size:12px;}
-        .center{width:200px;text-align:center;}
+      body, div{  margin: 0px;padding: 0px; font-size:12px;}
+      .title,.title div{text-align:center;font-weight:600;font-size:33px;}
+      .title a{text-decoration:none;color:#4078c0;line-height:26px;}
     </style>
   </head>
   <body>
     <div class="center">
       <div>A few games of my childhood</div>
-      <div><a href="https://zhizhiweizhizhi.github.io/game/">one elephant two lion</a></div>
-      <div><a href="https://zhizhiweizhizhi.github.io/game/">one elephant two lion</a></div>
+      <div><a href="https://zhizhiweizhizhi.github.io/game/one_elephant_two_lion.htm">one_elephant_two_lion</a></div>
+      <div><a href="https://zhizhiweizhizhi.github.io/game/whatever_you_want.htm">whatever_you_want</a></div>
     </div>
   </body>
 </html>
