--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    <div class="center">
+    <div class="title">
       <div>A few games of my childhood</div>
       <div><a href="https://zhizhiweizhizhi.github.io/game/one_elephant_two_lion.htm">one_elephant_two_lion</a></div>
       <div><a href="https://zhizhiweizhizhi.github.io/game/whatever_you_want.htm">whatever_you_want</a></div>
