--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <title>game</title>
     <style type="text/css">
       body, div{  margin: 0px;padding: 0px; font-size:12px;}
-      .title,.title div{text-align:center;font-weight:600;font-size:33px;}
+      .title,.title div{text-align:center;font-weight:600;font-size:33px;margin:50px auto;}
       .title a{text-decoration:none;color:#4078c0;line-height:26px;}
     </style>
   </head>
